--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
@@ -1,11 +1,11 @@
 @model IEnumerable<Volvox.Helios.Domain.Discord.Guild>
 
-<div class="row">
+<div class="row mt-4">
     <div class="col-12">
         <h1 class="d-inline-block">Dashboard</h1>
-        <button class="btn btn-info dropdown-toggle float-right" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        @*<button class="btn btn-info dropdown-toggle float-right" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Select Server
-        </button>
+        </button>*@
         <div class="dropdown-menu" id="dashboardSelectGuildDropdown">
             @foreach (var guild in Model)
             {
