--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -9,25 +9,12 @@
     @for (var i = 0; i < Model.UserGuilds.Count; i++)
     {
         var uG = Model.UserGuilds[i];
-        var classes = new string[] { "show", "on" };
-        if (i != 0)
-        {
-            classes[0] = "";
-            classes[1] = "off";
-        }
-        <div class="card mt-4" style="border-radius: .25rem;border-bottom: 1px solid rgba(0,0,0,.125);">
+        <div class="card mt-4" style="border-bottom: 1px solid rgba(0, 0, 0, .125); border-radius: .25rem;">
             <div class="card-img-top d-flex align-items-center bg-gray pt-2 pb-2" id="s-@i-@uG.Guild.Name">
-                @if (uG.Guild.ImageUrl.EndsWith("/.png"))
-                {
-                    <img class="card-img-top ml-3" src="/images/small/volvox-logo.png" style="width: 21px;" alt="Alternative Image" />
-                }
-                else
-                {
-                    <img class="card-img-top ml-3" style="width: 21px;" src="@uG.Guild.ImageUrl" alt="@uG.Guild.Name">
-                }
+                <img class="card-img-top ml-3" style="width: 21px;" src="@uG.Guild.ImageUrl" alt="@uG.Guild.Name">
                 <h5 class="col mb-0 card-title text-volvox">@uG.Guild.Name</h5>
-                <a href="#" onclick="toggleAccBtn(event);" class="text-volvox mr-3" data-toggle="collapse" data-target="#s-@i" aria-expanded="false" aria-controls="s-@i">
-                    <i class="fas fa-toggle-@classes[1] d-block"></i>
+                <a href="#" onclick="toggleAccBtn(event);" class="text-volvox mr-3" data-toggle="collapse" data-target="#s-@i" aria-expanded="true" aria-controls="s-@i">
+                    <i class="fas fa-toggle-on d-block"></i>
                 </a>
                 @if (uG.Guild.Details.IsBotInGuild)
                 {
@@ -38,7 +25,7 @@
                         <i class="fas fa-cog"></i>
                     </a>
                 }
-                <a href="#" class="text-volvox mr-2" dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a href="#" class="text-volvox mr-2" dropdown-toggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-ellipsis-h ml-auto mr-3"></i>
                 </a>
                 <div class="dropdown-menu">
@@ -58,7 +45,7 @@
                     </a>
                 </div>
             </div>
-            <div class="collapse multi-collapse @classes[0]" id="s-@i" aria-labelledby="s-@i-@uG.Guild.Name">
+            <div class="collapse show" id="s-@i" aria-labelledby="s-@i-@uG.Guild.Name">
                 <div class="card-body">
                     <p class="card-text">
                         <partial name="./Partials/_DashboardCard" model="@uG.Guild" />
@@ -70,17 +57,17 @@
 </div>
 
 @section Scripts {
-<script>
+    <script>
 
-    function toggleAccBtn(e) {
-        var el = $(e.target);
-        if (!el.is('a')) {
-            if (el.hasClass('fa-toggle-on'))
-                el.removeClass('fa-toggle-on').addClass('fa-toggle-off');
-            else
-                el.removeClass('fa-toggle-off').addClass('fa-toggle-on');
+        function toggleAccBtn(e) {
+            const el = $(e.target);
+            if (!el.is('a')) {
+                if (el.hasClass('fa-toggle-on'))
+                    el.removeClass('fa-toggle-on').addClass('fa-toggle-off');
+                else
+                    el.removeClass('fa-toggle-off').addClass('fa-toggle-on');
+            }
         }
-    }
 
-</script>
+    </script>
 }
