--- a/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
@@ -1,6 +1,4 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Moderation.GlobalSettingsViewModel
-@{
-}
 
 <h2>Global Module Settings</h2>
 <hr />
@@ -34,18 +32,48 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-success" />
+            <div class="form-group" style="margin:10px auto; text-align: center;">
+                <button type="submit" value="Save" class="btn btn-success" style="width:100%;">
+                    Save <i class="fas fa-save" style="margin-left:0.5em;"></i>
+                </button>
             </div>
         </form>
     </div>
+    <div class="card" style="width:100%; text-align:center;">
+        <div class="card-body">
+            <h3 class="card-title" style="margin-bottom:1em;">
+                Filters
+            </h3>
+            <div class="row" style="margin:0 auto;">
+                <div class="col-sm-6">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Link Filter</h5>
+                            <p class="card-text">Configure your link filter.</p>
+                            <a class="btn btn-success" href="linkfilter"> Go to filter <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Profanity Filter</h5>
+                            <p class="card-text">Configure your profanity filter.</p>
+                            <a class="btn btn-success" href="profanityfilter"> Go to filter  <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         $(document).ready(function () {
-            $('.chosen-select').chosen(); 
+            $('.chosen-select').chosen();
         });
     </script>
 }
