--- a/src/Volvox.Helios.Web/Views/Moderation/Punishments.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/Punishments.cshtml
@@ -2,13 +2,13 @@
 
 <form method="POST">
     <section class="container">
-        <div class="table table-responsive">
-            <table asp-for="Punishments" class="table table-responsive table-striped table-bordered">
+        <div class="vertical-margin-large">
+            <table asp-for="Punishments" style="width: 100%">
 
                 <thead>
                     <tr>
                         <td>Punishment Type</td>
-                        <td>Punishment Duration mins</td>
+                        <td>Duration (mins)</td>
                         <td>Warning Type</td>
                         <td>Warning Threshold</td>
                         <td>Role</td>
@@ -22,45 +22,28 @@
                         foreach (var punishment in Model.Punishments)
                         {
                             Html.ViewData.TemplateInfo.HtmlFieldPrefix = $"Punishments[{i}]";
-                            <partial name="_PunishmentRowReadonly" , for="@punishment" />
+                            <partial name="_PunishmentRowReadonly" , model="punishment" />
                             i++;
                         }
                     }
                 </tbody>
                 <tfoot>
-                    <tr>
-                        <th colspan="6">
-                            <button id="addPunishment" type="button" class="btn btn-primary" data-toggle="tooltip" data-original-title="Add more controls"><i class="glyphicon glyphicon-plus-sign"></i>&nbsp; Add&nbsp;</button>
-                        </th>
-                    </tr>
+                    <tr></tr>
                 </tfoot>
             </table>
         </div>
     </section>
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-success" />
+        <button id="RemoveSelected" class="btn btn-danger" data-toggle="tooltip" data-original-title="Add more controls"><i class="glyphicon glyphicon-plus-sign"></i>Remove Selected</button>
+    </div>
+
+    <div class="form-group">
+        <a class="btn btn-primary" href="newpunishment">Add New</a>
     </div>
 </form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script>  
-        $(document).ready(function () {
-            $("#addPunishment").click(function () {
-                $.ajax({
-                    url: "NewPunishmentRow",
-                    cache: false,
-                    success: function (html) { $("#PunishmentTableBody").append(html); }
-                });
-                return false;
-            });
-
-        });
-
-        function RemoveTableRow(e) {
-            $(e.target).closest("tr").remove();
-        }
-    </script>
 }
 
 <style>
