--- a/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRow.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRow.cshtml
@@ -16,7 +16,9 @@
     <td>@Html.DropDownListFor(m => m.PunishType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.PunishType>())</td>
     <td>@Html.TextBoxFor(m => m.PunishDuration)</td>
     <td>@Html.DropDownListFor(m => m.WarningType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.WarningType>())</td>
-    <td>@Html.TextBoxFor(m => m.WarningThreshold)</td>
-    <td>@Html.TextBoxFor(m => m.RoleId)</td>
+    <td><input type="number" asp-for="WarningThreshold" value="1" min="1" step="1" max="2147483647" class="form-control" /></td>
+    <td>
+        <select asp-for="RoleId" asp-items="Model.Role"></select>
+    </td>
 </tr>
 
