--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -26,7 +26,7 @@
                         <i class="fas fa-cog"></i>
                     </a>
                 }
-                <a href="#" class="text-volvox mr-2" dropdown-toggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                @*<a href="#" class="text-volvox mr-2" dropdown-toggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-ellipsis-h ml-auto mr-3"></i>
                 </a>
                 <div class="dropdown-menu">
@@ -47,7 +47,7 @@
                         <i class="fas fa-trash-alt mr-2"></i>
                         Remove
                     </a>
-                </div>
+                </div>*@
             </div>
             <div class="collapse show" id="s-@i" aria-labelledby="s-@i-@uG.Guild.Name">
                 <div class="card-body">
