--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
@@ -22,7 +22,7 @@ else
         </div>
     </div>
 
-    <div class="mt-4">
+    @*<div class="mt-4">
         <div class="row mt-3">
             <p class="col-md-12">
                 Total Messages: 13 | Unique Posters: 0
@@ -43,7 +43,7 @@ else
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-md-0 mt-4">
                 <div class="bg-gray pt-2 pb-2 h-100 rounded">
                     <h5 class="ml-2">Roles</h5>
                     <ul class="pl-0 light-list" style="max-height: 230px;overflow-y:auto;">
@@ -55,7 +55,7 @@ else
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-md-0 mt-4">
                 <div class="bg-gray pt-2 pb-2 h-100 rounded">
                     <h5 class="ml-2">Channels</h5>
                     <ul class="pl-0 light-list" style="max-height: 230px;overflow-y:auto;">
@@ -67,7 +67,7 @@ else
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
 
     @*<div>
