--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="card mt-4" style="border-bottom: 1px solid rgba(0, 0, 0, .125); border-radius: .25rem;">
             <div class="card-img-top d-flex align-items-center bg-gray pt-2 pb-2" id="s-@i-@uG.Guild.Name">
                 <img class="card-img-top ml-3" style="width: 21px;" src="@uG.Guild.ImageUrl" alt="@uG.Guild.Name">
-                <h5 class="col mb-0 card-title text-volvox">@uG.Guild.Name</h5>
+                <h5 class="col mb-0 card-title">@uG.Guild.Name</h5>
                 <a href="#" onclick="toggleAccBtn(event);" class="text-volvox mr-3" data-toggle="collapse" data-target="#s-@i" aria-expanded="true" aria-controls="s-@i">
                     @*TODO: toggle icon if is favourite*@
                     <i class="fas fa-toggle-on d-block"></i>
