altered href to use tag helpers. added base for index

--- a/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
@@ -46,20 +46,20 @@
             </h3>
             <div class="row" style="margin:0 auto;">
                 <div class="col-sm-6">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem; margin:0 auto;">
                         <div class="card-body">
                             <h5 class="card-title">Link Filter</h5>
                             <p class="card-text">Configure your link filter.</p>
-                            <a class="btn btn-success" href="linkfilter"> Go to filter <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
+                            <a class="btn btn-success" asp-controller="Moderation" asp-action="linkfilter"> Go to filter <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem; margin:0 auto;">
                         <div class="card-body">
                             <h5 class="card-title">Profanity Filter</h5>
                             <p class="card-text">Configure your profanity filter.</p>
-                            <a class="btn btn-success" href="profanityfilter"> Go to filter  <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
+                            <a class="btn btn-success" asp-controller="Moderation" asp-action="profanityfilter"> Go to filter  <i class="fas fa-arrow-right" style="margin-left:1em;"></i></a>
                         </div>
                     </div>
                 </div>
