--- a/src/Volvox.Helios.Web/Views/Moderation/Punishments.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/Punishments.cshtml
@@ -38,7 +38,7 @@
     </div>
 
     <div class="form-group">
-        <a class="btn btn-primary" href="newpunishment">Add New</a>
+        <a class="btn btn-primary" asp-controller="Moderation" asp-action="newpunishment">Add New</a>
     </div>
 </form>
 
