Made dashboard site responsive

--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
@@ -14,7 +14,7 @@ else
         <div>
             <span class="material-badge mr-2"><strong>@Model.Details.MemberCount</strong> Members</span>
             <span class="material-badge mr-2"><strong>@Model.Details.Roles.Count</strong> Roles</span>
-            <span class="material-badge"><strong>@Model.Details.Channels.Count</strong> Channels</span>
+            <span class="material-badge mr-2 mr-md-0"><strong>@Model.Details.Channels.Count</strong> Channels</span>
         </div>
 
         <div class="ml-auto">
