- Added Poll version to settings page - Modified footer view - Redesigned small changes and added more colour to the pages

--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Volvox.Helios.Domain.Discord.Guild>
 
-<div class="row mt-4">
+<div class="row">
     <div class="col-12">
         <h1 class="d-inline-block">Dashboard</h1>
         @*<button class="btn btn-info dropdown-toggle float-right" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
