--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -3,87 +3,73 @@
 }
 
 <div class="row">
+
     <div class="col-12">
         <h1 class="text-center">Volvox.Helios</h1>
-        <h6 class="text-center font-italic">A new kind of Discord bot.</h6>
-        <h6 class="text-center font-italic">Modular Discord bot written in ASP.NET Core</h6>
+        <h6 class="text-center mt-3 text-volvox font-italic">A new kind of Discord bot.</h6>
+        <h6 class="text-center text-volvox font-italic">Modular Discord bot written in ASP.NET Core</h6>
     </div>
-</div>
-<hr>
+    <hr class="col-7 border-volvox">
 
-<div class="row">
-    <div class="col-12">
-        <h5>About</h5>
-        <p>
+
+    <div class="col-12 mt-5">
+        <h4 class="text-volvox underline-left">About</h4>
+        <p class="mb-4">
             Volvox is a community dedicated to helping others learn various technologies. We teach members by having everyone contribute to open source projects. The goal is to eventually have multiple projects ranging across different technologies so that members can learn whatever they would like. We're currently at over 100 members and are always looking for more!
         </p>
-        <br>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-12">
-        <h5>Projects</h5>
-        <p>
+        <h4 class="text-volvox underline-left">Projects</h4>
+        <p class="mb-4">
             Volvox.Helios - Modular Discord bot written in ASP.NET Core, Entity Framework, Razor. The goal of this bot is to be the only bot you'll have to add to your Discord server. It will be managed from a web interface that will show a vast array of data and statistics. Each module has its own settings and can be enabled or disabled as the admin of the Discord server chooses.
         </p>
-        <br>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-12">
-        <h5>How to Join</h5>
+        <h4 class="text-volvox underline-left">How to Join</h4>
         <p>
             It's simple to join, just join our Discord Server! After you join please head over to the introductions channel so we can assign you the proper role. You can also message an Admin and they'll get you all setup.
         </p>
     </div>
+
+    <div class="col-12 mt-5">
+        <h4 class="text-volvox underline-left">Links</h4>
+        <ul class="mt-4">
+            <li>
+                Repository: <a href="https://github.com/VolvoxCommunity/Volvox.Helios" target="_blank">https://github.com/VolvoxCommunity/Volvox.Helios</a>
+            </li>
+            <li>
+                Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects" target="_blank">https://github.com/VolvoxCommunity/Volvox.Helios/projects</a>
+            </li>
+            <li>
+                Website: <a href="http://volvox.tech/" target="_blank">http://volvox.tech</a>
+            </li>
+            <li>
+                Discord: <a href="https://discordapp.com/invite/jReSmc3" target="_blank">https://discordapp.com/invite/jReSmc3</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-12 mt-5">
+        <h3 class="text-center">Current Modules</h3>
+        <hr class="col-7">
+        <h4 class="text-volvox underline-left mt-4 mt-5">Stream Announcer</h4>
+        <p>
+            Announce to a specific channel when a user starts streaming to Twitch
+        </p>
+        <h4 class="text-volvox underline-left mt-4">Streamer Role</h4>
+        <p>
+            Using the Streamer Role Module on your server defines a role people will be assigned when they start a stream.<br>
+            Makes it easy to always know when you have someone streaming on the server! <br>
+            At least we know who to watch now.
+        </p>
+        <h4 class="text-volvox underline-left mt-4">Poll Manager</h4>
+        <p>
+            Create and manage custom polls.
+        </p>
+        <h4 class="text-volvox underline-left mt-4">Chat Tracker</h4>
+        <p>
+            Keeps track of your Guild's chat and provides you with up-to-date analytics.
+        </p>
+        <h4 class="text-volvox underline-left mt-4">Remembot</h4>
+        <p>
+            Add messages to be sent a intervals you define. Guild member always late for raids? Set a reminder message that pings them in the evening on every Tuesday. Are you manually creating sign up messages every morning? Now there's a bot for that!
+        </p>
+    </div>
+
 </div>
-
-
-<br>
-<h5>Links</h5>
-<ul>
-    <li>
-        Repository: <a href="https://github.com/VolvoxCommunity/Volvox.Helios">https://github.com/VolvoxCommunity/Volvox.Helios</a>
-    </li>
-    <li>
-        Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects">https://github.com/VolvoxCommunity/Volvox.Helios/projects</a>
-    </li>
-    <li>
-        Website: <a href="http://volvox.tech/">http://volvox.tech</a>
-    </li>
-    <li>
-        Discord: <a href="https://discordapp.com/invite/jReSmc3">https://discordapp.com/invite/jReSmc3</a>
-    </li>
-</ul>
-
-<br>
-<h4>Current Modules</h4>
-<hr>
-<h5>Stream Announcer</h5>
-<p>
-    Announce to a specific channel when a user starts streaming to Twitch
-</p>
-<hr>
-<h5>Streamer Role</h5>
-<p>
-    Using the Streamer Role Module on your server defines a role people will be assigned when they start a stream.<br>
-    Makes it easy to always know when you have someone streaming on the server! <br>
-    At least we know who to watch now.
-</p>
-<hr>
-<h5>Poll Manager</h5>
-<p>
-    Create and manage custom polls.
-</p>
-<hr>
-<h5>Chat Tracker</h5>
-<p>
-    Keeps track of your Guild's chat and provides you with up-to-date analytics.
-</p>
-<hr/>
-<h5>Remembot</h5>
-<p>
-    Add messages to be sent a intervals you define. Guild member always late for raids? Set a reminder message that pings them in the evening on every Tuesday. Are you manually creating sign up messages every morning? Now there's a bot for that!
-</p>
