--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -4,71 +4,71 @@
     ViewData["Title"] = "Settings";
 }
 
-<div class="row mt-4">
-    <div class="col-10">
+<div class="row">
+    <div class="col-8 col-md-10">
         <h2>@Model.GuildName</h2>
     </div>
-    <div class="col-2">
+    <div class="col-4 col-md-2">
         <div class="position-relative" style="top:50%;transform:translateY(-50%);">
-            <span class="badge badge-success d-table ml-auto">4 Users online</span>
+            <span class="badge badge-success bg-volvox d-table ml-auto">4 Users online</span>
         </div>
     </div>
 </div>
-<hr />
+<hr>
 <h4 class="mt-4">Modules:</h4>
-<div class="row mb-5">
+<div class="row">
     @foreach (var module in Model.Modules)
     {
-        <div class="col-lg-3 col-md-6 mt-lg-0 mt-4">
-            <div class="card h-100 border-volvox">
-                <!--if module disabled-->
-                <!--
-                    <div class="card h-100 border-danger">
 
-                        <div>
-                            <div class="w-100 module-enabled-popover" style="border-radius: .25rem .25rem 0 0;background: #9e2c14;">
-                                v. 1.2.3
-                            </div>
-                            <div class="w-100 bg-danger module-enabled-popover" style="font-weight: bold;">
-                                Module enabled
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                @module.Name
-                                <a style="color: black" class="float-right" asp-controller="Settings" asp-action="@(module.Name.Replace(" ", "") + "Settings")">
-                                    <i class="fas fa-cog text-danger"></i>
-                                </a>
-                            </h5>
-                            <p class="card-text">@module.Description</p>
-                        </div>
-                    </div>
+    <div class="col-lg-3 col-md-6 mt-lg-0 mt-4">
+        <!--if module disabled-->
+        @*<div class="card h-100 border-danger">
 
-                -->
-
-                <div>
-                    <div class="w-100 module-enabled-popover module-version">
-                        v.@module.Version
-                    </div>
-                    <div class="w-100 bg-volvox module-enabled-popover">
-                        <strong>Module enabled</strong>
-                    </div>
+            <div>
+                <div class="w-100 module-enabled-popover module-version danger-popover">
+                    v. 1.2.3
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">
-                        @module.Name
-                        <a style="color: black" class="float-right" asp-controller="Settings" asp-action="@(module.Name.Replace(" ", "") + "Settings")">
-                            <i class="fas fa-cog text-volvox"></i>
-                        </a>
-                    </h5>
-                    <p class="card-text">@module.Description</p>
+                <div class="w-100 bg-danger module-enabled-popover" style="font-weight: bold;">
+                    Module enabled
                 </div>
             </div>
+            <div class="card-body">
+                <h5 class="card-title">
+                    @module.Name
+                    <a style="color: black" class="float-right" asp-controller="Settings" asp-action="@(module.Name.Replace(" ", "") + "Settings")">
+                        <i class="fas fa-cog text-danger"></i>
+                    </a>
+                </h5>
+                <p class="card-text">@module.Description</p>
+            </div>
+        </div>*@
+        <div class="card h-100 border-volvox">
+            <div>
+                <div class="w-100 module-enabled-popover module-version">
+                    v.@module.Version
+                </div>
+                <div class="w-100 bg-volvox module-enabled-popover">
+                    <strong>Module enabled</strong>
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">
+                    @module.Name
+                    <a style="color: black" class="float-right" asp-controller="Settings" asp-action="@(module.Name.Replace(" ", "") + "Settings")">
+                        <i class="fas fa-cog text-volvox"></i>
+                    </a>
+                </h5>
+                <p class="card-text">@module.Description</p>
+            </div>
         </div>
+    </div>
     }
 
     <div class="col-lg-3 col-md-6 mt-lg-0 mt-4">
         <div class="card h-100 border-skyblue">
+            <div class="w-100 module-enabled-popover skyblue-popover module-version">
+                v. 1.0.0
+            </div>
             <div class="w-100 bg-skyblue module-enabled-popover">
                 <strong>0 Polls available</strong>
             </div>
